<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_splash"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/splash" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/mapa" />
        <item
            android:id="@+id/nav_ciudades"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/ciudades" />
        <item
            android:id="@+id/nav_listar_distancia"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/listar_distancia" />
    </group>
</menu>