<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_splash">

    <fragment
        android:id="@+id/nav_splash"
        android:name="calderon.cordova.pongo.pa3.org.ui.splash.SplashFragment"
        android:label="@string/splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splash_to_mapa"
            app:destination="@id/nav_mapa" />
    </fragment>

    <fragment
        android:id="@+id/nav_mapa"
        android:name="calderon.cordova.pongo.pa3.org.ui.mapa.MapaFragment"
        android:label="@string/mapa"
        tools:layout="@layout/fragment_mapa" >

    </fragment>

    <fragment
        android:id="@+id/nav_ciudades"
        android:name="calderon.cordova.pongo.pa3.org.ui.ciudades.CiudadesFragment"
        android:label="@string/ciudades"
        tools:layout="@layout/fragment_ciudades" >
        <action
            android:id="@+id/action_ciudades_to_mapa"
            app:destination="@id/nav_mapa" />
    </fragment>
    <fragment
        android:id="@+id/nav_listar_distancia"
        android:name="calderon.cordova.pongo.pa3.org.ui.listardistancia.ListarDistanciaFragment"
        android:label="@string/listar_distancia"
        tools:layout="@layout/fragment_listar_distancia" />
</navigation>